Implementado Teste Unitário (Arquivo)

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,15 @@
   		<artifactId>opencsv</artifactId>
   		<version>5.2</version>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		
+  		<!-- Dependência é apenas para teste, não colocamos no git, nem mandamos pra alguém -->
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
   
   <build>
