--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
-  		
   		<!-- Dependência é apenas para teste, não colocamos no git, nem mandamos pra alguém -->
   		<scope>test</scope>
   	</dependency>
@@ -35,7 +34,6 @@
   <build>
   	<plugins>
   		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
   			<version>3.8.1</version>
   			<configuration>
@@ -43,6 +41,12 @@
 	          <target>1.8</target>
 	        </configuration>
   		</plugin>
+  		
+  		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.0.0-M5</version>
+		</plugin>
   		
   		<!-- Para gerar o jar -->
   		<plugin>
