--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
   		<!-- Dependência é apenas para teste, não colocamos no git, nem mandamos pra alguém -->
   		<scope>test</scope>
   	</dependency>
+  	
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>3.3.3</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
   
   <build>
